# frown

./: Dockerfile  README.insomnihack.md  README.md  challenge  docker-entrypoint.sh  libttyris  tty-tetris-v2
ansible/: ansible.cfg  install-deps.sh  play.sh  playbook.yml
ansible/files/: daemon.json
ansible/files/docker-challenge/: Dockerfile  Dockerfile.dev  Dockerfile.flag  Dockerfile.prod
ansible/files/docker-challenge/frida/: frida-gadget.config
ansible/files/docker-challenge/libnss_shim/: config.json
ansible/files/docker-challenge/libttyris/: .gitignore  CMakeLists.txt  library.c  library.h
ansible/files/docker-challenge/scripts/: configure-auth-method.sh  repo-key.sh  start-tetris.sh  tetris.sh
ansible/files/docker-challenge/tty-tetris-v2/: .gitignore  CMakeLists.txt  LICENSE  README.md  board.c  board.h  config.h  field.c  field.h  figure.c  figure.h  frida.c  frida.h  http.c  http.h  main.c  score.c  score.h  strip  tetris.c  tetris.h
ansible/files/docker-challenge/tty-tetris-v2/nano/: console.c  console.h  io.c  io.h  io_con.c  io_con.h  io_key.c  io_key.h  io_signals.i  io_streams.i  io_term.i  io_timers.i  io_trace.i
ansible/files/docker-challenge/ttyriscrypt/: go.mod  main.go  makesecret.py
ansible/group_vars/: all.yml
ansible/templates/: cssh.socket.j2  cssh@.service.j2
frida/: frida-gadget.config
libnss_shim/: config.json
scripts/: github-key.sh
solution/: README.md  __main__.py
solution/frida/: .gitignore  package-lock.json  package.json  tsconfig.json
solution/frida/agent/: index.ts
systemd/: cssh.socket  csshd@.service
